# retail

./: .gitignore  02-王昊宇-白盒单元测试报告.docx  03-王昊宇-性能测试报告.docx  README.md  start.bat  start.ps1  stop.ps1  软件系统综合课程设计——练习2（白盒+单元测试） .docx  软件系统综合课程设计——练习3（性能测试） .docx
apps/admin-web/: .env.development  .env.production.example  README.md  index.html  package.json  run.ps1
apps/customer-miniapp/: .eslintrc.json  README.md  app.js  app.json  project.private.config.json
camera-agent/: CMakeLists.txt  README.md
camera-agent/src/: main.cpp
database/: retail_camera_report_upgrade.sql  retail_db.sql  retail_goods.sql
docs/: api.md  architecture.md  database.md  deployment.md
real-test-scripts/: performance_smoke.py  retail-performance-test-plan.jmx
report/: DIAGRAM_GUIDE.md  README.md  SWJTU_Bachelor_Thesis.tex  chapter2-standalone.tex
report/appendix/: appendix1.tex  appendix2.tex
report/bibliography/: references.bib
report/chapters/: acknowledgments.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  conclusion.tex  introduction.tex
report/puml/: fig-component-view.puml  fig-deploy-view.puml  fig-er-diagram.puml  fig-logic-view.puml
report/style/: swjtu.sty
retail/: RUN.md  api.md  retail_db.sql  retail_recommendation_upgrade.sql  start-admin.bat  start-ai.bat  start-all.bat  start-all.ps1
retail/retail-admin-pro/: package-lock.json  vite.config.ts  vite.config.ts.timestamp-1775821155298-55298ee5bc8dc8.mjs
retail/retail-ai/: main.py  requirements.txt
retail/retail-customer/: README.md  UI_BEAUTIFY_GUIDE.md  app.js  (+6 more)
(+320 files in other folders)
